kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $PROJECT_NAME-service
spec:
  selector:
    app: $PROJECT_NAME
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
